--- a/modules/css/styles.css
+++ b/modules/css/styles.css
@@ -1,9 +1,9 @@
 *{
-    background-color: #4169E1;
+background: rgb(86, 95, 97); 
 }
 
 .mapa{
-    width: 45%;
+    width: 50%;
     margin: auto;
 }
 
