--- a/modules/css/styles.css
+++ b/modules/css/styles.css
@@ -12,3 +12,8 @@ background: rgb(86, 95, 97);
     stroke: #8b8b8b;
     stroke-width: 2PX;
 }
+
+#Amazona:hover{
+color: aqua;
+background-color: aqua;
+}
